<resources>
    <string name="app_name">SchoolLink</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_create_order">Create Order</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="details">Details</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="app_notice">Notice</string>
    <string name="app_assignment">Assignment</string>
    <string name="search_hint">Enter search text</string>
    <string name="subject">Subject</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_top">Top fragment</string>
    <string-array name="pizzas">
        <item>Diavolo</item>
        <item>Funghi</item>
    </string-array>
    <string-array name="pasta">
        <item>Spaghetti Bolognese</item>
        <item>Lasagne</item>
    </string-array>
    <string-array name="stores">
        <item>Cambridge</item>
        <item>Sebastopol</item>
    </string-array>
    <string-array name="titles">
        <item>Home</item>
        <item>Notifications</item>
        <item>Assignments</item>
        <item>Send Note</item>
        <item>Teacher Note</item>
        <item>Contact School</item>
        <item>Spam</item>
        <item>Profile</item>

    </string-array>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="connection_error">Unable to connect to network</string>
    <string name="send">Send</string>
    <string name="std">Std</string>
    <string name="select">Select Students</string>

    <string name="title_activity_search">Search Results</string>
    <string name="done">Done</string>
    <string name="selectStudent">Select student</string>
    <string name="home">Home</string>
    <string name="profiles">Profiles</string>
    <string name="Notifications">Diary Notes</string>
    <string name="Events">School Calendar</string>
    <string name="Feedback">Send Note</string>
    <string name="ParentNote">Send Note</string>
    <string name="Teacher_Note">Teacher Note</string>
    <string name="ContactSchool">Contact School</string>
    <string name="spam_string">Spam</string>
    <string name="title_activity_login">Login</string>
    <string name="logout_string">Log Out</string>
    <string name="handbook_share_message">Handbook message</string>
    <string name="send_message">Share message via</string>
    <string name="profile">Profile</string>
    <string name="TimeTable">Timetable</string>
    <string name="today">Today</string>
    <string name="Homework">Homework</string>
    <string name="diary_notes">Diary Notes</string>
    <string name="parent_messages">Parent Messages</string>
    <string name="school_events">Upcoming Events</string>
    <string name="timetable_not_found">No timetable found for today</string>
    <string name="timetable_not_downloaded">Unable to download timetable. \\nPlease try again after some time</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="title_activity_calendar_events">School Calendar</string>
    <string name="title_activity_notes">Diary Notes</string>
    <string name="title_activity_contacts">School Contacts</string>
    <string name="no_timetable_available_for_today">No timetable available for today</string>

    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="CONSUMER_KEY">FYb2ipP3TtsjypFzFcqmUIgzR</string>
    <string name="CONSUMER_SECRET">t0vQHLYZp6PSAyBYnZB4a260SFFT20RChlE1xx8ixzkCaWGuA6</string>
    <string name="unable_to_open_file">Unable to open file</string>

    <!--Array of months for the calender-->
    <string-array name="cal_month_name">
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
    </string-array>
    <string-array name="cal_month_values">
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
    </string-array>
</resources>
