<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/home" />

        <item
            android:id="@+id/notifications"
            android:checked="false"
            android:icon="@drawable/ic_star_black"
            android:title="@string/Notifications" />

        <item
            android:id="@+id/assignments"
            android:checked="false"
            android:icon="@drawable/ic_send_black"
            android:title="@string/Events" />

        <item
            android:id="@+id/timetable"
            android:checked="false"
            android:icon="@drawable/ic_restore_black_24dp"
            android:title="@string/TimeTable" />


        <item
            android:id="@+id/feedback"
            android:checked="false"
            android:icon="@drawable/ic_insert_comment_black_24dp"
            android:title="@string/ParentNote" />

        <item
            android:id="@+id/teacherNote"
            android:checked="false"
            android:icon="@drawable/ic_email_black"
            android:title="@string/Teacher_Note" />
        <item
            android:id="@+id/contactSchool"
            android:checked="false"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/ContactSchool" />
        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/logout_string" />

    </group>
</menu>