<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_from"
        android:text="From:"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/Teacher_To"
            android:text= "@string/std"
            />
        <Spinner
            android:id="@+id/std_spinner"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View style="@style/Divider"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/subject"
            android:text= "@string/subject"
            />
        <Spinner
            android:id="@+id/subject_spinner"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View style="@style/Divider"></View>

    <Button
        android:id="@+id/studentSelect"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/select"

        />

    <View style="@style/Divider"></View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/teacher_note"
        android:gravity="top|left"
        android:layout_weight="1"
        android:hint="Message">
        <requestFocus/>
    </EditText>
    <Button
        android:id="@+id/sendButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/send"

        />
</LinearLayout>